--- a/index.html
+++ b/index.html
@@ -7,92 +7,121 @@
   </head>
 
   <body>
-    <h1>Vacation Packages</h1>
-    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Vacation Packages</h1>
+        <h2>Welcome to the Great Seattle Sale!</h2>
+        <p>Donec nibh purus, tincidunt quis ultrices vel, maximus nec dolor.
+          Maecenas faucibus lorem lacus, sed aliquam felis finibus at.
+          Mauris lacinia malesuada massa non placerat.</p>
+      </div>
 
-    <h3>Package 1</h3>
-    <ul>
-      <li>Location: Beijing, China</li>
-      <li>Price: $1,000</li>
-      <li>Duration: 5 days</li>
-      <li>Description: Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nunc pretium leo enim, id volutpat felis
-        iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
-        lectus et, finibus arcu. Suspendisse luctus quis felis in
-        accumsan. Quisque urnla purus, lacinia quis interdum convallis,
-        porttitor a dui. </li>
-    </ul>
-    <p>Contact Information: <a href="mailto:china@gmail.com">china@gmail.com</a></p>
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Package 1</h3>
+          <ul>
+            <li>Location: Beijing, China</li>
+            <li>Price: $1,000</li>
+            <li>Duration: 5 days</li>
+            <li>Description: Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Nunc pretium leo enim, id volutpat felis
+              iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
+              lectus et, finibus arcu. Suspendisse luctus quis felis in
+              accumsan. Quisque urnla purus, lacinia quis interdum convallis,
+              porttitor a dui. </li>
+          </ul>
+          <p>Contact Information: <a href="mailto:china@gmail.com">china@gmail.com</a></p>
+        </div>
 
-    <h3>Package 2</h3>
-    <ul>
-      <li>Location: Hawaii, USA</li>
-      <li>Price: $1,300</li>
-      <li>Duration: 4 days</li>
-      <li>Description: Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nunc pretium leo enim, id volutpat felis
-        iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
-        lectus et, finibus arcu. Suspendisse luctus quis felis in
-        accumsan. Quisque urnla purus, lacinia quis interdum convallis,
-        porttitor a dui. </li>
-    </ul>
-    <p>Contact Information: <a href="mailto:usa@gmail.com">usa@gmail.com</a></p>
+        <div class="col-md-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3>Package 2</h3>
+              <p><em class="featured">Featured!!!</em></p>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li>Location: Hawaii, USA</li>
+                <li>Price: $1,300</li>
+                <li>Duration: 4 days</li>
+                <li>Description: Lorem ipsum dolor sit amet, consectetur
+                  adipiscing elit. Nunc pretium leo enim, id volutpat felis
+                  iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
+                  lectus et, finibus arcu. Suspendisse luctus quis felis in
+                  accumsan. Quisque urnla purus, lacinia quis interdum convallis,
+                  porttitor a dui. </li>
+              </ul>
+              <p>Contact Information: <a href="mailto:usa@gmail.com">usa@gmail.com</a></p>
+            </div>
+          </div>
+        </div>
 
-    <h3>Package 3</h3>
-    <ul>
-      <li>Location: Jakarta, Indonesia</li>
-      <li>Price: $1,500</li>
-      <li>Duration: 7 days</li>
-      <li>Description: Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nunc pretium leo enim, id volutpat felis
-        iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
-        lectus et, finibus arcu. Suspendisse luctus quis felis in
-        accumsan. Quisque urnla purus, lacinia quis interdum convallis,
-        porttitor a dui. </li>
-    </ul>
-    <p>Contact Information: <a href="mailto:indo@gmail.com">indo@gmail.com</a></p>
+        <div class="col-md-4">
+          <h3>Package 3</h3>
+          <ul>
+            <li>Location: Jakarta, Indonesia</li>
+            <li>Price: $1,500</li>
+            <li>Duration: 7 days</li>
+            <li>Description: Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Nunc pretium leo enim, id volutpat felis
+              iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
+              lectus et, finibus arcu. Suspendisse luctus quis felis in
+              accumsan. Quisque urnla purus, lacinia quis interdum convallis,
+              porttitor a dui. </li>
+          </ul>
+          <p>Contact Information: <a href="mailto:indo@gmail.com">indo@gmail.com</a></p>
+        </div>
+      </div>
 
-    <h3>Package 4</h3>
-    <ul>
-      <li>Location: Mumbai, India</li>
-      <li>Price: $1,800</li>
-      <li>Duration: 12 days</li>
-      <li>Description: Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nunc pretium leo enim, id volutpat felis
-        iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
-        lectus et, finibus arcu. Suspendisse luctus quis felis in
-        accumsan. Quisque urnla purus, lacinia quis interdum convallis,
-        porttitor a dui. </li>
-    </ul>
-    <p>Contact Information: <a href="mailto:india@gmail.com">india@gmail.com</a></p>
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Package 4</h3>
+          <ul>
+            <li>Location: Mumbai, India</li>
+            <li>Price: $1,800</li>
+            <li>Duration: 12 days</li>
+            <li>Description: Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Nunc pretium leo enim, id volutpat felis
+              iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
+              lectus et, finibus arcu. Suspendisse luctus quis felis in
+              accumsan. Quisque urnla purus, lacinia quis interdum convallis,
+              porttitor a dui. </li>
+          </ul>
+          <p>Contact Information: <a href="mailto:india@gmail.com">india@gmail.com</a></p>
+        </div>
 
-    <h3>Package 5</h3>
-    <ul>
-      <li>Location: London, England</li>
-      <li>Price: $2,000</li>
-      <li>Duration: 8 days</li>
-      <li>Description: Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nunc pretium leo enim, id volutpat felis
-        iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
-        lectus et, finibus arcu. Suspendisse luctus quis felis in
-        accumsan. Quisque urnla purus, lacinia quis interdum convallis,
-        porttitor a dui. </li>
-    </ul>
-    <p>Contact Information: <a href="mailto:uk@gmail.com">uk@gmail.com</a></p>
+        <div class="col-md-4">
+          <h3>Package 5</h3>
+          <ul>
+            <li>Location: London, England</li>
+            <li>Price: $2,000</li>
+            <li>Duration: 8 days</li>
+            <li>Description: Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Nunc pretium leo enim, id volutpat felis
+              iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
+              lectus et, finibus arcu. Suspendisse luctus quis felis in
+              accumsan. Quisque urnla purus, lacinia quis interdum convallis,
+              porttitor a dui. </li>
+          </ul>
+          <p>Contact Information: <a href="mailto:uk@gmail.com">uk@gmail.com</a></p>
+        </div>
 
-    <h3>Package 6</h3>
-    <ul>
-      <li>Location: San Francisco, USA</li>
-      <li>Price: $1,200</li>
-      <li>Duration: 5 days</li>
-      <li>Description: Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nunc pretium leo enim, id volutpat felis
-        iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
-        lectus et, finibus arcu. Suspendisse luctus quis felis in
-        accumsan. Quisque urnla purus, lacinia quis interdum convallis,
-        porttitor a dui. </li>
-    </ul>
-    <p>Contact Information: <a href="mailto:usa@gmail.com">usa@gmail.com</a></p>
-
+        <div class="col-md-4">
+          <h3>Package 6</h3>
+          <ul>
+            <li>Location: San Francisco, USA</li>
+            <li>Price: $1,200</li>
+            <li>Duration: 5 days</li>
+            <li>Description: Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Nunc pretium leo enim, id volutpat felis
+              iaculis imperdiet. Curabitur dignissim metus pretium, accumsan
+              lectus et, finibus arcu. Suspendisse luctus quis felis in
+              accumsan. Quisque urnla purus, lacinia quis interdum convallis,
+              porttitor a dui. </li>
+          </ul>
+          <p>Contact Information: <a href="mailto:usa@gmail.com">usa@gmail.com</a></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
